[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Script/HUD.gd" type="Script" id=1]
[ext_resource path="res://Sound/CheckButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/buttonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://UI/Script/SaveBtn.gd" type="Script" id=4]
[ext_resource path="res://UI/Scenes/LoadBtn.gd" type="Script" id=5]
[ext_resource path="res://UI/Script/PauseCntr.gd" type="Script" id=6]
[ext_resource path="res://Assets/WallTiles/Images/BlackWall.png" type="Texture" id=7]

[node name="HUD" type="Panel"]

pause_mode = 2
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Visibility" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="." index="0"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -673.0
margin_top = -19.5
margin_right = -16.0
margin_bottom = 20.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 2
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="CheckButton" parent="HBoxContainer" index="0" instance=ExtResource( 2 )]

margin_left = 194.0
margin_right = 328.0

[node name="PauseBtn" type="Button" parent="HBoxContainer" index="1"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 333.0
margin_right = 399.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "PAUSE"
flat = false
align = 1
_sections_unfolded = [ "Pause", "Rect", "custom_fonts" ]

[node name="SaveBtn" type="Button" parent="HBoxContainer" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 404.0
margin_right = 459.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SAVE"
flat = false
align = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Pause", "Rect", "custom_fonts" ]

[node name="LoadBtn" type="Button" parent="HBoxContainer" index="3"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_right = 519.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "LOAD"
flat = false
align = 1
script = ExtResource( 5 )
_sections_unfolded = [ "Pause", "Rect", "custom_fonts" ]

[node name="ExitBtn" type="Button" parent="HBoxContainer" index="4"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 524.0
margin_right = 579.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "EXIT"
flat = false
align = 1
_sections_unfolded = [ "Pause", "Rect", "custom_fonts" ]

[node name="Inventory_Button" type="Button" parent="HBoxContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 584.0
margin_right = 657.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Inventory"
flat = false
align = 1

[node name="PauseCntr" type="Container" parent="." index="1"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Pause" ]

[node name="ResumeBtn" type="Button" parent="PauseCntr" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 368.0
margin_top = 9.0
margin_right = 445.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RESUME"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Background" type="TextureRect" parent="PauseCntr" index="1"]

modulate = Color( 1, 1, 1, 0.255098 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 58.0
margin_right = 720.0
margin_bottom = 432.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Visibility" ]

[connection signal="pressed" from="HBoxContainer/SaveBtn" to="HBoxContainer/SaveBtn" method="_on_SaveBtn_pressed"]

[connection signal="pressed" from="HBoxContainer/LoadBtn" to="HBoxContainer/LoadBtn" method="_on_SaveBtn_pressed"]

[connection signal="pressed" from="HBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]

[connection signal="pressed" from="HBoxContainer/Inventory_Button" to="." method="_on_Inventory_Button_pressed"]

[connection signal="pressed" from="PauseCntr/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]


